# Collections-C

./: .gitignore  .travis.yml  AUTHORS  CIRCULAR USING LINKED LIST  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  configure.ac  index.html  merge sort  params.json
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt
examples/hashtable/: CMakeLists.txt
examples/hashtable/initialization/: configuration.c  custom_key_types.c  pointer_keys.c  string_keys.c
examples/hashtable/operations/: adding_key_value_pairs.c  getting_info_about_the_table_and_pairs.c  iterating_over_pairs.c  removing_key_value_pairs.c
javascripts/: all.js  all_nosearch.js
src/: AVLRoute  BFS_AVL  CMakeLists.txt  Makefile.am  array.c  array.h  bitset.c  cc_array.c  cc_common.c  cc_deque.c  cc_hashset.c  cc_hashtable.c  cc_list.c  cc_pqueue.c  cc_queue.c  cc_ring_buffer.c  cc_slist.c  cc_stack.c  cc_treeset.c  cc_treetable.c  cc_tsttable.c  circularlisnkedlist.c  collectionc.pc.in  collections-c.h  common.c  common.h  deque.c  deque.h  dlist.c  dlist.h  docconf  hashset.c  hashset.h  hashtable.c  hashtable.h  list.c  list.h  pqueue.c  queue.c  queue.h  (+13 more)
src/html/: DoxygenLayout.xml  annotated.html  array_8c.html  array_8c_source.html  array_8h.html  array_8h_source.html  classes.html  collections-c_8h.html  collections-c_8h_source.html  common_8h.html  common_8h_source.html  customdoxygen.css  deque_8c.html  deque_8c_source.html  deque_8h.html  deque_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_f.html  globals_func.html  globals_func_d.html  globals_func_f.html  globals_func_h.html  globals_func_l.html  globals_func_q.html  globals_func_r.html  globals_func_s.html  globals_func_t.html  globals_g.html  globals_h.html  globals_i.html  globals_k.html  globals_l.html  globals_m.html  (+90 more)
src/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  files_0.js  files_1.js  files_2.js  (+41 more)
src/include/: array.h  bitset.h  cc_array.h  cc_common.h  cc_deque.h  cc_hashset.h  cc_hashtable.h  cc_list.h  cc_pqueue.h  cc_queue.h  cc_ring_buffer.h  cc_slist.h  cc_stack.h  cc_treeset.h  cc_treetable.h  cc_tsttable.h  common.h  deque.h  hashset.h  hashtable.h  list.h  pqueue.h  queue.h  ring_buffer.h  slist.h  stack.h  treeset.h  treetable.h  tsttable.h
src/include/memory/: cc_dynamic_pool.h  cc_static_pool.h
src/include/sized/: cc_array_sized.h
src/memory/: cc_dynamic_pool.c  cc_static_pool.c
src/sized/: cc_array_sized.c
stylesheets/: print.css  screen.css
test/: CMakeLists.txt  Makefile.am  arrayTest.cpp  array_sized_test.c  array_test.c  dequeTest.cpp  deque_test.c  dlist_test.c  dlist_test.h  hashsetTest.cpp  hashset_test.c  hashtableTest.cpp  hashtable_test.c  hashtable_test.h  listTest.cpp  list_test.c  munit.c  munit.h  pqueueTest.cpp  pqueue_test.c  queueTest.cpp  queue_test.c  rbufTest.cpp  rbuf_test.c  ring_buffer_test.c  slistTest.cpp  slist_test.c  stackTest.cpp  stack_test.c  test.c  treesetTest.cpp  treeset_test.c  treetableTest.cpp  treetable_test.c  tsttableTest.cpp  tsttable_test.c  vector_test.c
test/benchmark/: CMakeLists.txt
test/benchmark/pool/: CMakeLists.txt  dpool_bench.c
test/include/: test.h
test/unit/: CMakeLists.txt  array_sized_test.c  array_test.c  deque_test.c  dynamic_pool_test.c  hashset_test.c  hashtable_test.c  list_test.c  pqueue_test.c  queue_test.c  ring_buffer_test.c  slist_test.c  stack_test.c  static_pool_test.c  string_test.c  treeset_test.c  treetable_test.c  tst_table_test.c
