cmake_minimum_required(VERSION 3.5)
project(collectc_hashtable_examples)

include_directories(${PROJECT_SOURCE_DIR}/include ${collectc_INCLUDE_DIRS})

add_executable(string_keys initialization/string_keys.c)
target_link_libraries(string_keys collectc)

add_executable(custom_key_types initialization/custom_key_types.c)
target_link_libraries(custom_key_types collectc)

add_executable(pointer_keys initialization/pointer_keys.c)
target_link_libraries(pointer_keys collectc)

add_executable(configuration initialization/configuration.c)
target_link_libraries(configuration collectc)

add_executable(iterating_over_pairs operations/iterating_over_pairs.c)
target_link_libraries(iterating_over_pairs collectc)

add_executable(adding_key_value_pairs operations/adding_key_value_pairs.c)
target_link_libraries(adding_key_value_pairs collectc)

add_executable(removing_key_value_pairs operations/removing_key_value_pairs.c)
target_link_libraries(removing_key_value_pairs collectc)

add_executable(getting_info_about_the_table_and_pairs operations/getting_info_about_the_table_and_pairs.c)
target_link_libraries(getting_info_about_the_table_and_pairs collectc)
